--- a/docassemble/USCISApplications/data/questions/limited_scope_questions.yml
+++ b/docassemble/USCISApplications/data/questions/limited_scope_questions.yml
@@ -4,43 +4,39 @@ subject: |
   Limited Scope of Services and Authorization
 content: |
   <h2 class="h4">Limited Scope of Services and Authorization</h2>
-  The services provided by the Immigration Application Workshop are limited to the information and assistance given today at the workshop. No current or ongoing attorney-client relationship is created by the provision of today’s services.
+  The services provided by the Immigration Workshop are limited to the information and assistance given today at the workshop. No current or ongoing attorney-client relationship is created by the provision of today's services.  
 
   <h2 class="h4">How we use your information</h2>
-  We need to record basic details in order to assist participants with their immigration application. During the brief legal screening meeting, participants are responsible for giving accurate and truthful information. All the information provided to the workshop organizers during this time will remain confidential with exceptions noted below.
+  We need to record basic details in order to assist participants with their immigration case. During the brief document review meeting, participants are responsible for giving accurate and truthful information. All the information provided to the workshop organizers during this time will remain confidential with exceptions noted below.
 
   <h2 class="h4">Scope of Services and Authorization</h2>
-  I understand that the organizations here today will help inform me of my legal rights, help me understand the legal process, and assist me with my immigration application. The organizations or attorneys present today will not serve as my legal representative and will not represent me after today unless explicitly discussed. 
+  I understand that the organizations here today will help inform me of my legal rights, help me understand the legal process, and review my documents. The organizations or attorneys present today will not serve as my legal representative and will not represent me after today unless explicitly discussed. Mailing or submission of any application that is completed at an immigration workshop will be discussed with applicant participants and based on the needs of all parties a plan will be made accordingly.  If all parties agree to have the organization mail on your behalf, the application or submission will be made within 30 days at the latest. 
 
-  I understand that if I want legal representation for my immigration case, I should look for a legal representative on my own and keep track of all my efforts to find a legal representative so that I can share this information with the immigration judge if I have a court hearing in the future. 
+  I have voluntarily given my information to the organizations present today and I understand that the information I give about my case may be given to other people for the purposes of assisting me with my immigration case should I be eligible. This includes other nonprofit legal service organizations.  
 
-  I have voluntarily given my information to the organizations present today and I understand that the information I give about my case may be given to other people for the purposes of assisting me with my work permit application or other immigration benefits for which I may be eligible, and to evaluate and continue with the Immigration Application Workshop. This includes representatives from the city, state, and federal government.
+  If additional services become available after this workshop, I agree to allow TRP to share my contact information with another nonprofit organization to evaluate whether I can receive additional services. 
 
-  If additional services become available after this workshop (such as assistance with change of venue for immigration court or asylum), I agree to allow TRP to share my contact information with another nonprofit organization to evaluate whether I can receive additional services. 
+  I DO NOT consent to the sharing of my information aside from the contexts described above.
 
-  I DO NOT consent to the sharing of my information aside from the contexts described above. 
-
-  This Scope of Services and Authorization has been explained and/or translated to me in a language I understand. 
+  This Scope of Services and Authorization has been explained and/or translated to me in a language I understand.
 
   ---
 
   <h2 class="h4">Alcance de los Servicios y Autorización</h2>
-  Los servicios proporcionados por el taller de Documentos de Aplicación de Inmigración (Taller), se limitarán a darle la información y asistirle en el taller de hoy. Los servicios que le demos y brindemos no crea una relación entre usted y nosotros de abogado a cliente, y la asistencia que le brindamos hoy es sólo por hoy.
+  Los servicios proporcionados por el taller de Inmigración (Taller), se limitarán a darle la información y asistirle en el taller de hoy. Los servicios que le demos y brindemos no crea una relación entre usted y nosotros de abogado a cliente, y la asistencia que le brindamos hoy es sólo por hoy.
 
   <h2 class="h4">Cómo usamos su información</h2>
-  Necesitamos registrar detalles básicos para ayudar a los participantes con su solicitud de inmigración. Durante la breve reunión de selección legal, los participantes son responsables de dar información precisa y veraz. Toda la información proporcionada a los organizadores del taller durante este tiempo será confidencial, con las excepciones que se indican a continuación.
+  Necesitamos registrar detalles básicos para ayudar a los participantes con su caso de inmigración. Durante la breve consulta legal, los participantes son responsables de dar información precisa y veraz. Toda la información proporcionada a los organizadores del taller durante este tiempo será confidencial, con las excepciones que se indican a continuación.
 
   <h2 class="h4">Alcance de los Servicios y Autorización</h2>
-  Entiendo que las organizaciones están aquí hoy para ayudarme e informarme sobre mis derechos legales, ayudarme a comprender el proceso legal y para ayudarme con mi solicitud de inmigración. Las organizaciones y abogados aquí hoy no sirven como mi representante legal y no me representará después de hoy a menos que se discuta explícitamente.
+  Entiendo que las organizaciones aquí hoy me ayudarán a informarme sobre mis derechos legales, a comprender el proceso legal y a revisar mis documentos. Las organizaciones o abogados presentes hoy no actuarán como mi representante legal y no me representarán después de hoy a menos que se discuta explícitamente. El envío por correo o la presentación de cualquier solicitud que se complete en un taller de inmigración se discutirá con los participantes solicitantes y, según las necesidades de todas las partes, se elaborará un plan en consecuencia.  Si todas las partes aceptan que la organización envíe el correo en su nombre, la solicitud o envío se realizará a más tardar en un plazo de 30 días.
 
-  Entiendo que si quiero representación legal para mi caso de inmigración, debo buscar un abogado por mi cuenta y hacer un seguimiento de todos mis esfuerzos para encontrar un abogado para poder compartir esta información con el juez de inmigración en mi próxima audiencia judicial.
-  
-  He dado voluntariamente mi información a las organizaciones presentes hoy y entiendo que la información que doy sobre mi caso puede ser dada a otras personas con el propósito de ayudarme con mi solicitud de permiso de trabajo u otros beneficios de inmigración para los que puedo ser elegible, y para evaluar y continuar con el taller. Esto incluye representantes de la ciudad, el estado y el gobierno federal.
+  He dado voluntariamente mi información a las organizaciones presentes hoy y entiendo que la información que doy sobre mi caso puede ser dada a otras personas con el propósito de ayudarme con mi caso de inmigración si soy elegible. Esto incluye otras organizaciones legales. 
 
-  Si hay servicios adicionales disponibles después de este taller (como asistencia con el cambio de sede para la corte de inmigración o asilo), acepto permitir que TRP comparta mi información de contacto con otra organización sin fines de lucro para evaluar si puedo recibir servicios adicionales.
-    
+  Si hay servicios adicionales disponibles después de este, acepto permitir que TRP comparta mi información de contacto con otra organización sin fines de lucro para evaluar si puedo recibir servicios adicionales.
+
   NO doy mi consentimiento para que se comparta mi información fuera de los contextos descritos anteriormente.
- 
+
   Este Alcance de los Servicios y la Autorización me ha sido explicado y traducido en un idioma que entiendo.
 
 ---
