--- a/docassemble/USCISApplications/data/questions/combined_application_questions.yml
+++ b/docassemble/USCISApplications/data/questions/combined_application_questions.yml
@@ -1803,7 +1803,7 @@ fields:
 ---
 id: homeless shelter
 question: |
-  Are you currently living in a city-run shelter?" 
+  Are you currently living in a city-run shelter?
 fields:
   - no label: users[i].homeless_shelter
     datatype: yesnoradio
@@ -3208,7 +3208,7 @@ attachment:
           % if not users[i].homeless_shelter:
           ${ users[i].hardship_details }
           % else:
-          I am currently homeless and residing in a city-run shelter. I respectfully request that USCIS waive the fee for my employment authorization due to my current financial hardship and homelessness.
+      I am currently homeless and residing in a city-run shelter. I respectfully request that USCIS waive the fee for my employment authorization due to my current financial hardship and homelessness.
           % endif
         % endif
     - "asset_type_1": |
