Created a standalone COV/COA application that produces a limited PDF package for COV/COA only.

--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -309,7 +309,9 @@ subquestion: |
   2. Complete the limited scope retainer
   3. Verify eligibility
   4. Complete the application, for the I-765 or the I-821 or both, for each applicant
-  5. Download and print your work. You will get a separate
+  5. Determine if you need a Fee Waiver Request. (optional)
+  6. If you need to complete a Change of Venue/Address during this application. 
+  7. Download and print your work. You will get a separate
       set of documents for each person in the family group.
 continue button field: intro_main
 ---
