Updates to COA only flow and other minor changes.

--- a/docassemble/USCISApplications/data/questions/change_venue_address.yml
+++ b/docassemble/USCISApplications/data/questions/change_venue_address.yml
@@ -135,6 +135,8 @@ sets:
   - users[i].dhs.address.zip
 question: |
   Office of the Principal Legal Advisor (OPLA) address
+subquestion: |
+  This is for ${ users[i] }'s case.
 fields: 
   - Street address: users[i].dhs.address.address
     address autocomplete: True
