--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -632,7 +632,7 @@ id: kind of interview
 question: |
   What kind of application will this family complete?
 subquestion: |
-  **Note:** You have the option to make Change of Venue (COV) and Change of Address forms (COV) if you select **TPS and EAD** or **EAD only.**
+  **Note:** You will have the option to make Change of Venue (COV) and Change of Address forms (COA) if you select **TPS and EAD** or **EAD only.**
 field: application_kind
 buttons:
   - TPS and EAD: ead_and_tps
