--- a/docassemble/USCISApplications/data/questions/change_venue_address.yml
+++ b/docassemble/USCISApplications/data/questions/change_venue_address.yml
@@ -160,13 +160,17 @@ fields:
   - Court city: users[i].dhs.court_city
     show if:
       code: |
-        change_kind == "cov_and_coa" and showifdef('users[i].dhs.different_court_location')
+        change_kind == "cov_and_coa"
+    js show if: |
+      val("users[i].dhs.different_court_location")
   - Court state: users[i].dhs.court_state
     code: |
       states_list()
-    show if: 
+    show if:
       code: |
-        change_kind == "cov_and_coa" and showifdef('users[i].dhs.different_court_location')
+        change_kind == "cov_and_coa"
+    js show if: |
+      val("users[i].dhs.different_court_location")
 ---
 objects:
   - users[i].cov_coa_instructions: ALDocument.using(title=f"{users[i]} - COV COA Instructions", filename=space_to_underscore(f"{users[i]} - COV COA Instructions"), has_addendum=False)
@@ -181,16 +185,16 @@ objects:
   - users[i].eoir_33_coa: ALDocument.using(title="EIOR-33 Change of address", filename="EIOR-33 Change of address", has_addendum=False )
 ---
 code: |
-  users[i].cov_coa_instructions.enabled = change_kind != "no"
+  users[i].cov_coa_instructions.enabled = users[i].application_is_approved and change_kind != "no"
 ---
 code: |
-  users[i].eoir_61_cov.enabled = change_kind == "cov_and_coa"
+  users[i].eoir_61_cov.enabled = users[i].application_is_approved and change_kind == "cov_and_coa" 
 ---
 code: |
-  users[i].motion_addendum.enabled = change_kind == "cov_and_coa"
+  users[i].motion_addendum.enabled = users[i].application_is_approved and change_kind == "cov_and_coa"
 ---
 code: |
-  users[i].eoir_33_coa.enabled = change_kind != "no"
+  users[i].eoir_33_coa.enabled = users[i].application_is_approved and change_kind != "no"
 ---
 attachment:
   variable name: users[i].cov_coa_instructions[j]
